feat: implement production readiness infrastructure with configuration validation, CORS enforcement, and global error handling